--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Top Info Bar -->
+    <!-- Top Info Bar --> //asw
     <div class="top-info-bar">
         <div class="top-info-container">
             <div class="top-info-item">
