Perubahan click logo dan banner utama

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <div class="hero-subtitle">Selamat datang di Website</div>
-                <h1 class="hero-title">Hadir untuk Membangun dan Memandirikan</h1>
-                <p class="hero-description">Melalui semangat ukhuwah, kami mendampingi umat dengan ketulusan, membimbing kemandirian ekonomi syariah, serta membuka jalan bagi potensi lokal untuk memberikan manfaat luas.</p>
+                <h1 class="hero-title">Berkhidmat untuk Umat, Mencetak Generasi Beradab & Bermartabat</h1>
+                <p class="hero-description">Melalui semangat Nahdlatul Ulama, kami berkomitmen menyelenggarakan pendidikan berkualitas yang berlandaskan nilai Ahlussunnah wal Jama'ah An-Nahdliyah untuk mewujudkan generasi yang unggul secara intelektual dan kokoh secara spiritual.</p>
                 <a href="pages/spmb.html" class="hero-cta">Mulai Pendaftaran</a>
             </div>
         </section>
