--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </section>
 
         <!-- Keunggulan Kami -->
-        <section>
+        <section id="keunggulan">
             <h2><i class="far fa-lightbulb fa-icon-green"></i> Keunggulan Kami</h2>
             <div class="program-grid">
                 <div class="program-card">
@@ -211,12 +211,41 @@
             </div>
         </section>
 
-        <!-- CTA Pendaftaran -->
-        <section style="background: linear-gradient(135deg, #4CAF50 0%, #2e7d32 100%); color: white; padding: 40px; border-radius: 12px; text-align: center;">
-            <h2 style="color: white; margin-top: 0;"><i class="far fa-note-sticky" style="color: white; margin-right: 8px;"></i> Siap Bergabung dengan Kami?</h2>
-            <p style="font-size: 1.1em; margin-bottom: 20px;">Daftarkan putra-putri Anda sekarang melalui sistem SPMB Majelis Wakil Cabang Nahdlatul Ulama</p>
-            <a href="pages/spmb.html" class="button" style="background: white; color: #4CAF50; font-weight: bold;">Mulai Pendaftaran</a>
-            <p style="margin-top: 20px; font-size: 0.95em;">Pertanyaan? <a href="pages/contact.html" style="color: white; text-decoration: underline;">Hubungi kami</a> untuk informasi lebih lanjut.</p>
+        <!-- Contact Section -->
+        <section style="background: linear-gradient(135deg, #4CAF50 0%, #2e7d32 100%); color: white; padding: 60px 40px; border-radius: 12px;">
+            <h2 style="color: white; margin-top: 0; text-align: center; font-size: 2em; margin-bottom: 50px;"><i class="fas fa-map-location-dot" style="color: white; margin-right: 12px;"></i> Hubungi Kami</h2>
+            
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; align-items: start;">
+                <!-- Contact Info -->
+                <div>
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 8px; margin-bottom: 25px;">
+                        <h3 style="margin-top: 0; font-size: 1.3em; display: flex; align-items: center;"><i class="fas fa-phone" style="margin-right: 12px; color: white;"></i> Nomor Kontak</h3>
+                        <p style="font-size: 1.15em; margin: 10px 0; font-weight: 500;">
+                            <a href="tel:+6281280080275" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 10px; transition: all 0.3s ease;">
+                                <i class="fas fa-mobile-screen" style="color: #fff;"></i>
+                                +62 812 8008 0275
+                            </a>
+                        </p>
+                        <p style="font-size: 0.95em; color: rgba(255, 255, 255, 0.9); margin: 5px 0;">WhatsApp & Telepon</p>
+                    </div>
+
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 8px;">
+                        <h3 style="margin-top: 0; font-size: 1.3em; display: flex; align-items: center;"><i class="fas fa-map-pin" style="margin-right: 12px; color: white;"></i> Alamat</h3>
+                        <p style="font-size: 0.95em; line-height: 1.8; margin: 10px 0; color: rgba(255, 255, 255, 0.95);">
+                            Majelis Wakil Cabang Nahdlatul Ulama<br>
+                            Sidoarjo - Indonesia
+                        </p>
+                        <a href="https://maps.google.com/maps?q=MWCNU+Sidoarjo" target="_blank" style="display: inline-block; margin-top: 15px; color: white; text-decoration: none; background: rgba(255, 255, 255, 0.2); padding: 10px 15px; border-radius: 5px; transition: all 0.3s ease; font-weight: 500;">
+                            <i class="fas fa-directions" style="margin-right: 8px;"></i> Buka di Google Maps
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Map -->
+                <div style="border-radius: 8px; overflow: hidden; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3); height: 400px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8340866024457!2d112.73804!3d-7.43!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e8ff9f7f7f7f%3A0x7f7f7f7f7f7f7f7f!2sSidoarjo!5e0!3m2!1sen!2sid!4v1" width="100%" height="100%" style="border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
