--- a/pages/bp3nu-profile.html
+++ b/pages/bp3nu-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil BP3NU - Majelis Wakil Cabang Nahdlatul Ulama</title>
+    <title>Profil BP3MNU</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
                     <li class="dropdown">
                         <a href="#">Profil <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="bp3nu-profile.html">Profil BP3NU</a></li>
+                            <li><a href="BP3MNU-profile.html">Profil BP3MNU</a></li>
                             <li><a href="../index.html#visi-misi">Visi & Misi</a></li>
                             <li><a href="../index.html#keunggulan">Keunggulan Kami</a></li>
                         </ul>
@@ -55,14 +55,14 @@
     <main class="container">
         <!-- Hero Section -->
         <section class="hero-section-school">
-            <h2>Badan Pemeriksa dan Pengawas (BP3) NU</h2>
-            <p>Organisasi Pengurus dan Struktur Tata Kelola Majelis Wakil Cabang Nahdlatul Ulama</p>
+            <h2>Badan Pelaksana Penyelenggara Pendidikan Ma'arif Nahdlatul Ulama (BP3MNU)</h2>
+            <p>Organisasi Pengurus dan Struktur Tata Kelola Majelis Wakil Cabang Sidoarjo Nahdlatul Ulama</p>
         </section>
 
-        <!-- Tentang BP3NU -->
+        <!-- Tentang BP3MNU -->
         <section>
-            <h2>Tentang BP3NU</h2>
-            <p>Badan Pemeriksa dan Pengawas (BP3) Nahdlatul Ulama adalah lembaga yang bertanggung jawab dalam pengawasan, pengelolaan, dan pembinaan lembaga pendidikan di bawah naungan Majelis Wakil Cabang Nahdlatul Ulama. BP3NU memastikan implementasi visi dan misi NU dalam dunia pendidikan di tingkat cabang.</p>
+            <h2>Tentang BP3MNU</h2>
+            <p>BP3MNU adalah unit organisasi yang dibentuk oleh Nahdlatul Ulama (NU) melalui Lembaga Pendidikan Ma'arif NU untuk menjalankan fungsi penyelenggaraan dan pengelolaan satuan pendidikan di lingkungan NU. Lembaga ini berkedudukan sebagai badan pelaksana yang mengonsolidasikan tata kelola pendidikan agar mandiri dan sesuai dengan nilai-nilai Aswaja..</p>
         </section>
 
         <!-- Struktur Organisasi -->
@@ -70,7 +70,7 @@
             <h2>Struktur Organisasi</h2>
             <div class="profile-grid">
                 <div class="profile-card">
-                    <h3><i class="fas fa-user-tie fa-icon-green"></i> Ketua BP3NU</h3>
+                    <h3><i class="fas fa-user-tie fa-icon-green"></i> Ketua BP3MNU</h3>
                     <p><strong>Tugas Pokok:</strong></p>
                     <ul>
                         <li>Memimpin Badan Pemeriksa dan Pengawas</li>
@@ -83,7 +83,7 @@
                     <h3><i class="far fa-rectangle-list fa-icon-green"></i> Wakil Ketua</h3>
                     <p><strong>Tugas Pokok:</strong></p>
                     <ul>
-                        <li>Mendampingi ketua dalam memimpin BP3NU</li>
+                        <li>Mendampingi ketua dalam memimpin BP3MNU</li>
                         <li>Menggantikan ketua saat berhalangan</li>
                         <li>Mengawasi aspek administratif dan keuangan</li>
                         <li>Koordinasi dengan lembaga pendidikan</li>
@@ -132,9 +132,9 @@
             </div>
         </section>
 
-        <!-- Visi dan Misi BP3NU -->
+        <!-- Visi dan Misi BP3MNU -->
         <section>
-            <h2>Visi dan Misi BP3NU</h2>
+            <h2>Visi dan Misi BP3MNU</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
                 <div class="card">
                     <h3><i class="far fa-star fa-icon-green"></i> Visi</h3>
@@ -186,7 +186,7 @@
 
         <!-- Program Kerja -->
         <section>
-            <h2>Program Kerja Utama BP3NU</h2>
+            <h2>Program Kerja Utama BP3MNU</h2>
             <div class="program-grid">
                 <div class="program-card">
                     <h3><i class="far fa-bullseye fa-icon-green"></i> Monitoring Rutin</h3>
