Menkomenkan tombol daftar di main

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="hero-subtitle">Selamat datang di Website</div>
                 <h1 class="hero-title">Berkhidmat untuk Umat, Mencetak Generasi Beradab & Bermartabat</h1>
                 <p class="hero-description">Melalui semangat Nahdlatul Ulama, kami berkomitmen menyelenggarakan pendidikan berkualitas yang berlandaskan nilai Ahlussunnah wal Jama'ah An-Nahdliyah untuk mewujudkan generasi yang unggul secara intelektual dan kokoh secara spiritual.</p>
-                <a href="pages/spmb.html" class="hero-cta">Mulai Pendaftaran</a>
+                <!-- <a href="pages/spmb.html" class="hero-cta">Mulai Pendaftaran</a> -->
             </div>
         </section>
 
