Penambahan webview from mobile device

--- a/pages/pendaftaran.html
+++ b/pages/pendaftaran.html
@@ -226,6 +226,15 @@
                             <li><a href="../index.html#keunggulan">Keunggulan Kami</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="tk.html">Taman Kanak-Kanak (TK)</a></li>
+                            <li><a href="sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
+                            <li><a href="mts.html">Madrasah Tsanawiyah (MTs)</a></li>
+                            <li><a href="smk.html">Sekolah Menengah Kejuruan (SMK)</a></li>
+                        </ul>
+                    </li>
                     <li><a href="../index.html#blog">Blog</a></li>
                     <li><a href="../index.html#galeri">Galeri</a></li>
                     <li><a href="contact.html">Kontak</a></li>
