--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Majelis Wakil Cabang Nahdlatul Ulama</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,13 +28,13 @@
     <header class="main-header">
         <div class="header-container">
             <div class="logo">
-                <h1><i class="fas fa-mosque fa-icon-green"></i> MWCNU Sidoarjo</h1>
+                <h1><i class="fas fa-mosque fa-icon-green"></i> <span class="logo-text">MWCNU Tanggulangin</span></h1>
             </div>
             <nav class="main-nav">
-                <ul>
+                <ul class="nav-list" id="navList">
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="#">Profil <i class="fas fa-chevron-down"></i></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle">Profil <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="pages/bp3nu-profile.html">Profil BP3NU</a></li>
                             <li><a href="#visi-misi">Visi & Misi</a></li>
@@ -41,7 +42,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="pages/tk.html">Taman Kanak-Kanak (TK)</a></li>
                             <li><a href="pages/sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
@@ -53,9 +54,14 @@
                     <li><a href="pages/contact.html">Kontak</a></li>
                 </ul>
             </nav>
+            <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="header-cta">
                 <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> +62 812 8008 0275
+                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
                 </a>
             </div>
         </div>
@@ -212,10 +218,10 @@
         </section>
 
         <!-- Contact Section -->
-        <section style="background: linear-gradient(135deg, #4CAF50 0%, #2e7d32 100%); color: white; padding: 60px 40px; border-radius: 12px;">
-            <h2 style="color: white; margin-top: 0; text-align: center; font-size: 2em; margin-bottom: 50px;"><i class="fas fa-map-location-dot" style="color: white; margin-right: 12px;"></i> Hubungi Kami</h2>
-            
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; align-items: start;">
+        <section class="contact-cta">
+            <h2 class="contact-title"><i class="fas fa-map-location-dot"></i> Hubungi Kami</h2>
+
+            <div class="contact-grid">
                 <!-- Contact Info -->
                 <div>
                     <div style="background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 8px; margin-bottom: 25px;">
@@ -242,7 +248,7 @@
                 </div>
 
                 <!-- Map -->
-                <div style="border-radius: 8px; overflow: hidden; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3); height: 400px;">
+                <div class="map-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8340866024457!2d112.73804!3d-7.43!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e8ff9f7f7f7f%3A0x7f7f7f7f7f7f7f7f!2sSidoarjo!5e0!3m2!1sen!2sid!4v1" width="100%" height="100%" style="border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
