--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -28,6 +28,7 @@
         <div class="header-container">
             <div class="logo">
                 <h1><i class="fas fa-mosque fa-icon-green"></i> MWC NU</h1>
+                <!-- <img src="../assets/images/sd-logo.png" alt="SD Maarif NU Ngaban Logo" class="logo-img"> -->
             </div>
             <nav class="main-nav">
                 <ul>
@@ -38,6 +39,15 @@
                             <li><a href="bp3nu-profile.html">Profil BP3NU</a></li>
                             <li><a href="../index.html#visi-misi">Visi & Misi</a></li>
                             <li><a href="../index.html#keunggulan">Keunggulan Kami</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="tk.html">Taman Kanak-Kanak (TK)</a></li>
+                            <li><a href="sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
+                            <li><a href="mts.html">Madrasah Tsanawiyah (MTs)</a></li>
+                            <li><a href="smk.html">Sekolah Menengah Kejuruan (SMK)</a></li>
                         </ul>
                     </li>
                     <li><a href="../index.html#blog">Blog</a></li>
