--- a/pages/tk.html
+++ b/pages/tk.html
@@ -6,34 +6,21 @@
     <title>Taman Kanak-Kanak - Majelis Wakil Cabang Nahdlatul Ulama</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Top Info Bar -->
-    <div class="top-info-bar">
-        <div class="top-info-container">
-            <div class="top-info-item">
-                <i class="fas fa-map-pin"></i>
-                <span>Jakarta - Indonesia</span>
-            </div>
-            <div class="top-info-item">
-                <i class="fas fa-clock"></i>
-                <span>Sunday 8.00 - 10.00 am</span>
-            </div>
-        </div>
-    </div>
-
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-container">
             <div class="logo">
-                <h1><i class="fas fa-mosque fa-icon-green"></i> MWC NU</h1>
+                <h1><i class="fas fa-mosque fa-icon-green"></i> <span class="logo-text">MWCNU Tanggulangin</span></h1>
             </div>
             <nav class="main-nav">
-                <ul>
+                <ul class="nav-list" id="navList">
                     <li><a href="../index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="#">Profil <i class="fas fa-chevron-down"></i></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle">Profil <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="bp3nu-profile.html">Profil BP3NU</a></li>
                             <li><a href="../index.html#visi-misi">Visi & Misi</a></li>
@@ -41,7 +28,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle">Lembaga Pendidikan <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="tk.html">Taman Kanak-Kanak (TK)</a></li>
                             <li><a href="sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
@@ -50,15 +37,19 @@
                         </ul>
                     </li>
                     <li><a href="../index.html#blog">Blog</a></li>
-                    <li><a href="../index.html#galeri">Galeri</a></li>
                     <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </nav>
             <div class="header-cta">
                 <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> +62 812 8008 0275
+                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
                 </a>
             </div>
+            <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
     <main class="container">
