--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,7 @@
 
         <section class="mission-section" id="visi-misi">
             <h2><i class="far fa-bullseye fa-icon-green"></i> Visi dan Misi Kami</h2>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
+            <div class="mission-grid">
                 <div class="card">
                     <h3><i class="far fa-star fa-icon-green"></i> Visi MWC NU</h3>
                     <p>Menjadi lembaga pendidikan terdepan yang menghasilkan generasi beriman, berilmu, dan bermanfaat bagi masyarakat dengan mengintegrasikan nilai-nilai Nahdlatul Ulama, akademis unggul, dan keterampilan abad ke-21.</p>
@@ -243,7 +243,9 @@
     <footer>
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
+    <script src="js/device-detector.js"></script>
     <script src="js/main.js"></script>
     <script src="js/navigation.js"></script>
 </body>
 </html>
+
