--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -189,6 +189,7 @@
     <footer>
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
+    <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
 </body>
