--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,9 @@
     <title>Kontak - Majelis Wakil Cabang Nahdlatul Ulama</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
     <!-- Header Navigation -->
@@ -249,7 +251,9 @@
     <footer>
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
+    <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+
 </body>
 </html>
