--- a/pages/pendaftaran.html
+++ b/pages/pendaftaran.html
@@ -390,8 +390,10 @@
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
 
+    <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+
     <script>
         // School data
         const schoolData = {
