--- a/pages/spmb.html
+++ b/pages/spmb.html
@@ -276,7 +276,9 @@
     <footer>
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
+    <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+
 </body>
 </html>
