--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -14,7 +14,8 @@
     <header class="main-header">
         <div class="header-container">
             <div class="logo">
-                <h1><i class="fas fa-mosque fa-icon-green"></i> <span class="logo-text">MWCNU Tanggulangin</span></h1>
+                <img src="../assets/images/nu-logo.png" alt="NU Logo" class="logo-img">
+                <h1><span class="logo-text">MWCNU Tanggulangin</span></h1>
             </div>
             <nav class="main-nav">
                 <ul class="nav-list" id="navList">
