rev logo sekolah

--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="sd-page">
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-container">
@@ -56,6 +56,7 @@
     <main class="container">
         <!-- Hero Section -->
         <section class="hero-section-school">
+            <div class="hero-logo"></div>
             <h2>Sekolah Dasar Maarif (SD) NU</h2>
             <p>Memberikan Pendidikan Berkualitas dengan Integrasi Nilai-Nilai Islam dan Teknologi Modern</p>
         </section>
