--- a/pages/mts.html
+++ b/pages/mts.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="mts-page">
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-container">
@@ -56,6 +56,7 @@
     <main class="container">
         <!-- Hero Section -->
         <section class="hero-section-school">
+            <img src="../assets/images/mts-logo.png" alt="MTs Logo" class="hero-logo">
             <h2>Madrasah Tsanawiyah (MTs) NU</h2>
             <p>Mengembangkan Pemikiran Kritis dan Kepemimpinan Melalui Kurikulum yang Seimbang</p>
         </section>
