--- a/pages/smk.html
+++ b/pages/smk.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="smk-page">
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-container">
@@ -56,6 +56,7 @@
     <main class="container">
         <!-- Hero Section -->
         <section class="hero-section-school">
+            <div class="hero-logo"></div>
             <h2>Sekolah Menengah Kejuruan (SMK) NU</h2>
             <p>Mempersiapkan Peserta Didik dengan Keterampilan Vokasional Relevan untuk Industri Modern</p>
         </section>
