--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="pages/smk.html">Sekolah Menengah Kejuruan (SMK)</a></li>
                         </ul>
                     </li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="pages/blog.html">Blog</a></li>
                     <li><a href="pages/contact.html">Kontak</a></li>
                 </ul>
             </nav>
