Perbaikan pada supabase, penampilan from dan blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -111,5 +111,12 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+
+    <script>
+        // Load blog posts on page load
+        document.addEventListener('DOMContentLoaded', function() {
+            tampilkanBlog();
+        });
+    </script>
 </body>
 </html>
