--- a/pages/tk.html
+++ b/pages/tk.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/mobile-override.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="tk-page">
     <!-- Header Navigation -->
     <header class="main-header">
         <div class="header-container">
@@ -56,7 +56,8 @@
     <main class="container">
         <!-- Hero Section -->
         <section class="hero-section-school">
-            <h2>Taman Kanak-Kanak (TK) Maarif NU</h2>
+            <img src="../assets/images/tk-logo.png" alt="TK Logo" class="hero-logo">
+            <h2>Taman Kanak-Kanak Maarif NU</h2>
             <p>Membangun Fondasi Pendidikan yang Kuat dengan Metode Bermain Sambil Belajar</p>
         </section>
 
@@ -191,8 +192,63 @@
             <p style="text-align: center; font-size: 1.05em;"><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> Email: info@mwcnu.edu<br><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> Telepon: (XXX) XXX-XXXX</p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
+    <footer class="site-footer-modern">
+        <div class="site-footer-inner">
+            <div>
+                <div class="site-footer-brand">
+                    <img src="../assets/images/nu-logo.png" alt="Logo MWCNU">
+                    <h3>MWCNU Tanggulangin</h3>
+                </div>
+                <p>Membangun generasi berakhlak, unggul, dan siap menghadapi masa depan.</p>
+                <div class="site-footer-social">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div>
+                <h4>Tautan Cepat</h4>
+                <ul>
+                    <li><a href="../index.html">Beranda</a></li>
+                    <li><a href="../index.html#visi-misi">Visi & Misi</a></li>
+                    <li><a href="blog.html">Berita</a></li>
+                    <li><a href="contact.html">Kontak</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Akademik</h4>
+                <ul>
+                    <li><a href="tk.html">Taman Kanak-Kanak (TK)</a></li>
+                    <li><a href="sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
+                    <li><a href="mts.html">Madrasah Tsanawiyah (MTs)</a></li>
+                    <li><a href="smk.html">Sekolah Menengah Kejuruan (SMK)</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Hubungi Kami</h4>
+                <div class="site-contact-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Jl. Raya Tanggulangin, Sidoarjo, Jawa Timur</p>
+                </div>
+                <div class="site-contact-item">
+                    <i class="fas fa-phone-alt"></i>
+                    <p>(031) 8960 000 / 0812-8008-0275</p>
+                </div>
+                <div class="site-contact-item">
+                    <i class="far fa-envelope"></i>
+                    <p>info@mwcnu-tanggulangin.sch.id</p>
+                </div>
+            </div>
+        </div>
+        <div class="site-footer-bottom">
+            <div class="site-footer-bottom-inner">
+                <p>&copy; 2026 MWCNU Tanggulangin. All rights reserved.</p>
+                <div class="site-footer-policy">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
