--- a/pages/admin.html
+++ b/pages/admin.html
@@ -279,6 +279,85 @@
         .file-input {
             display: none;
         }
+
+        .confirm-modal-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 16px;
+            z-index: 2000;
+        }
+
+        .confirm-modal-overlay[hidden] {
+            display: none;
+        }
+
+        .confirm-modal {
+            width: min(420px, 100%);
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 12px 32px rgba(0, 0, 0, 0.25);
+            border: 2px solid #e8f5e9;
+            overflow: hidden;
+        }
+
+        .confirm-modal-header {
+            padding: 16px 20px 8px;
+        }
+
+        .confirm-modal-header h3 {
+            margin: 0;
+            color: #2e7d32;
+            font-size: 1.15rem;
+        }
+
+        .confirm-modal-body {
+            padding: 8px 20px 20px;
+            color: #333;
+            line-height: 1.5;
+        }
+
+        .confirm-modal-actions {
+            display: flex;
+            justify-content: flex-end;
+            gap: 10px;
+            padding: 0 20px 20px;
+        }
+
+        .confirm-modal-actions button {
+            border: none;
+            border-radius: 8px;
+            padding: 10px 14px;
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        #confirm-modal-cancel {
+            background: #eceff1;
+            color: #37474f;
+        }
+
+        #confirm-modal-confirm {
+            background: linear-gradient(135deg, #f44336 0%, #c62828 100%);
+            color: #fff;
+        }
+
+        #confirm-modal-confirm.confirm-btn-danger {
+            background: linear-gradient(135deg, #f44336 0%, #c62828 100%);
+            color: #fff;
+        }
+
+        #confirm-modal-confirm.confirm-btn-success {
+            background: linear-gradient(135deg, #4CAF50 0%, #2e7d32 100%);
+            color: #fff;
+        }
+
+        body.modal-open {
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
@@ -474,6 +553,21 @@
         <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
     </footer>
 
+    <div id="confirm-modal" class="confirm-modal-overlay" hidden>
+        <div class="confirm-modal" role="dialog" aria-modal="true" aria-labelledby="confirm-modal-title">
+            <div class="confirm-modal-header">
+                <h3 id="confirm-modal-title">Konfirmasi</h3>
+            </div>
+            <div class="confirm-modal-body">
+                <p id="confirm-modal-message">Yakin ingin melanjutkan tindakan ini?</p>
+            </div>
+            <div class="confirm-modal-actions">
+                <button type="button" id="confirm-modal-cancel">Batal</button>
+                <button type="button" id="confirm-modal-confirm">Hapus</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Supabase CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
@@ -531,7 +625,11 @@
             const imageFileInput = document.getElementById('image-file');
 
             if (!title || !content) {
-                alert('Please fill in title and content.');
+                await showInfoModal({
+                    title: 'Data Belum Lengkap',
+                    message: 'Please fill in title and content.',
+                    tone: 'danger'
+                });
                 return;
             }
 
@@ -545,7 +643,11 @@
                     if (uploadResult.success) {
                         finalImageUrl = uploadResult.publicUrl;
                     } else {
-                        alert('Failed to upload image: ' + uploadResult.error);
+                        await showInfoModal({
+                            title: 'Upload Gagal',
+                            message: 'Failed to upload image: ' + uploadResult.error,
+                            tone: 'danger'
+                        });
                         return;
                     }
                 }
@@ -558,7 +660,10 @@
                 };
 
                 await simpanBlog(dataBlog);
-                alert('Blog post added successfully!');
+                await showInfoModal({
+                    title: 'Berhasil',
+                    message: 'Blog post added successfully!'
+                });
                 document.getElementById('blog-form').reset();
                 
                 // Reset image preview
@@ -571,7 +676,11 @@
                 loadBlogPostsForAdmin(); // Reload the list
             } catch (error) {
                 console.error('Error saving blog post:', error);
-                alert('Error saving blog post. Please try again.');
+                await showInfoModal({
+                    title: 'Gagal Menyimpan',
+                    message: 'Error saving blog post. Please try again.',
+                    tone: 'danger'
+                });
             }
         }
 
@@ -599,11 +708,13 @@
                 }
 
                 posts.forEach(post => {
+                    const judul = post.blog_title || 'Tanpa Judul';
+                    const konten = post.blog_content || '';
                     const postElement = document.createElement('div');
                     postElement.className = 'blog-post-admin';
                     postElement.innerHTML = `
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                            <h4 style="margin: 0; color: #4CAF50;">${post.judul}</h4>
+                            <h4 style="margin: 0; color: #4CAF50;">${judul}</h4>
                             <button onclick="hapusBlogPost(${post.id})" class="btn-delete" style="padding: 6px 12px; font-size: 0.8em;">
                                 <i class="fas fa-trash"></i> Delete
                             </button>
@@ -611,8 +722,8 @@
                         <p style="margin: 5px 0; color: #666; font-size: 0.9em;">
                             ${new Date(post.tanggal).toLocaleDateString('id-ID')}
                         </p>
-                        <p style="margin: 10px 0;">${post.konten.substring(0, 150)}${post.konten.length > 150 ? '...' : ''}</p>
-                        ${post.gambar_url ? `<img src="${post.gambar_url}" alt="${post.judul}" style="max-width: 150px; max-height: 100px; border-radius: 4px;">` : ''}
+                        <p style="margin: 10px 0;">${konten.substring(0, 150)}${konten.length > 150 ? '...' : ''}</p>
+                        ${post.gambar_url ? `<img src="${post.gambar_url}" alt="${judul}" style="max-width: 150px; max-height: 100px; border-radius: 4px;">` : ''}
                     `;
                     container.appendChild(postElement);
                 });
@@ -628,17 +739,31 @@
 
         // Function to delete a blog post
         async function hapusBlogPost(id) {
-            if (!confirm('Are you sure you want to delete this blog post?')) {
+            const confirmed = await showDeleteConfirmModal({
+                title: 'Konfirmasi Hapus Blog',
+                message: 'Blog ini akan dihapus permanen. Lanjutkan?',
+                confirmText: 'Ya, Hapus',
+                cancelText: 'Batal'
+            });
+
+            if (!confirmed) {
                 return;
             }
 
             try {
                 await hapusBlog(id);
-                alert('Blog post deleted successfully!');
+                await showInfoModal({
+                    title: 'Berhasil',
+                    message: 'Blog post deleted successfully!'
+                });
                 loadBlogPostsForAdmin(); // Reload the list
             } catch (error) {
                 console.error('Error deleting blog post:', error);
-                alert('Error deleting blog post. Please try again.');
+                await showInfoModal({
+                    title: 'Gagal Menghapus',
+                    message: 'Error deleting blog post. Please try again.',
+                    tone: 'danger'
+                });
             }
         }
     </script>
