Perbaikan posisi logo

--- a/pages/mts.html
+++ b/pages/mts.html
@@ -55,10 +55,12 @@
     </header>
     <main class="container">
         <!-- Hero Section -->
-        <section class="hero-section-school">
+        <section class="hero-section hero-section-school hero-section-mts">
             <img src="../assets/images/mts-logo.png" alt="MTs Logo" class="hero-logo">
-            <h2>Madrasah Tsanawiyah (MTs) NU</h2>
-            <p>Mengembangkan Pemikiran Kritis dan Kepemimpinan Melalui Kurikulum yang Seimbang</p>
+            <div class="hero-content">
+                <h2>Madrasah Tsanawiyah (MTs) NU</h2>
+                <p>Mengembangkan Pemikiran Kritis dan Kepemimpinan Melalui Kurikulum yang Seimbang</p>
+            </div>
         </section>
 
         <!-- Statistik -->
