--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -55,10 +55,12 @@
     </header>
     <main class="container">
         <!-- Hero Section -->
-        <section class="hero-section-school">
-            <div class="hero-logo"></div>
-            <h2>Sekolah Dasar Maarif NU</h2>
-            <p>Memberikan Pendidikan Berkualitas dengan Integrasi Nilai-Nilai Islam dan Teknologi Modern</p>
+        <section class="hero-section hero-section-school hero-section-sd">
+            <img src="../assets/images/sd-logo.png" alt="SD Logo" class="hero-logo">
+            <div class="hero-content">
+                <h2>Sekolah Dasar Maarif NU</h2>
+                <p>Memberikan Pendidikan Berkualitas dengan Integrasi Nilai-Nilai Islam dan Teknologi Modern</p>
+            </div>
         </section>
 
         <!-- Statistik -->
