--- a/pages/smk.html
+++ b/pages/smk.html
@@ -55,10 +55,12 @@
     </header>
     <main class="container">
         <!-- Hero Section -->
-        <section class="hero-section-school">
-            <div class="hero-logo"></div>
-            <h2>Sekolah Menengah Kejuruan (SMK) NU</h2>
-            <p>Mempersiapkan Peserta Didik dengan Keterampilan Vokasional Relevan untuk Industri Modern</p>
+        <section class="hero-section hero-section-school hero-section-smk">
+            <img src="../assets/images/smk-logo.png" alt="SMK Logo" class="hero-logo">
+            <div class="hero-content">
+                <h2>Sekolah Menengah Kejuruan (SMK) NU</h2>
+                <p>Mempersiapkan Peserta Didik dengan Keterampilan Vokasional Relevan untuk Industri Modern</p>
+            </div>
         </section>
 
         <!-- Statistik -->
