--- a/pages/tk.html
+++ b/pages/tk.html
@@ -55,10 +55,12 @@
     </header>
     <main class="container">
         <!-- Hero Section -->
-        <section class="hero-section-school">
+        <section class="hero-section hero-section-school hero-section-tk">
             <img src="../assets/images/tk-logo.png" alt="TK Logo" class="hero-logo">
-            <h2>Taman Kanak-Kanak Maarif NU</h2>
-            <p>Membangun Fondasi Pendidikan yang Kuat dengan Metode Bermain Sambil Belajar</p>
+            <div class="hero-content">
+                <h2>Taman Kanak-Kanak Maarif NU</h2>
+                <p>Membangun Fondasi Pendidikan yang Kuat dengan Metode Bermain Sambil Belajar</p>
+            </div>
         </section>
 
         <!-- Statistik -->
